scripts/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: jijivi
  labels:
    app: hello-app
spec:
  tls:
  - hosts:
    - jijivi.net
    secretName: hello-app-tls
  rules:
  - host: jijivi.net
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-app
            port: 
              number: 8080
